# raft-kv-store

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/raft/: proto.h  raft.cpp  raft.h
src/transport/: peer.cpp  server.cpp  server.h
tests/: network_test.cpp  replication_test.cpp  voting_test.cpp
